[gd_scene load_steps=3 format=3 uid="uid://gb6hasqvftmy"]

[ext_resource type="Script" path="res://playground/scripts/sql_controller.gd" id="1_2nph0"]
[ext_resource type="Texture2D" uid="uid://51vxxpttjm38" path="res://playground/assets/A-Pose_4x.png" id="2_uts43"]

[node name="DatabaseConnection" type="CanvasLayer"]
script = ExtResource("1_2nph0")

[node name="MainTab" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Connect" type="Control" parent="MainTab"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TabContainer" type="TabContainer" parent="MainTab/Connect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 388.0
offset_right = 182.001
offset_bottom = 536.0
grow_horizontal = 2

[node name="Login" type="MarginContainer" parent="MainTab/Connect/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainTab/Connect/TabContainer/Login"]
layout_mode = 2
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="MainTab/Connect/TabContainer/Login/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="UsernameLabel" type="Label" parent="MainTab/Connect/TabContainer/Login/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Username"

[node name="Username" type="LineEdit" parent="MainTab/Connect/TabContainer/Login/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "insert username..."

[node name="PasswordLabel" type="Label" parent="MainTab/Connect/TabContainer/Login/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Password"

[node name="Password" type="LineEdit" parent="MainTab/Connect/TabContainer/Login/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "insert password..."
secret = true

[node name="LoginButton" type="Button" parent="MainTab/Connect/TabContainer/Login/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "LOGIN"

[node name="Register" type="MarginContainer" parent="MainTab/Connect/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainTab/Connect/TabContainer/Register"]
layout_mode = 2
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="MainTab/Connect/TabContainer/Register/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="UsernameLabel" type="Label" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Username
"

[node name="Username" type="LineEdit" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "insert username..."

[node name="PasswordLabel" type="Label" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Password"

[node name="Password" type="LineEdit" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "insert password..."
secret = true

[node name="PasswordLabel2" type="Label" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Repeat password"

[node name="Password2" type="LineEdit" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "insert password..."
secret = true

[node name="EmailLabel" type="Label" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "E-mail"

[node name="Email" type="LineEdit" parent="MainTab/Connect/TabContainer/Register/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "insert e-mail..."

[node name="Register" type="Button" parent="MainTab/Connect/TabContainer/Register/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Create Account
"

[node name="ErrorPopup" type="PopupPanel" parent="MainTab/Connect"]
title = "Error"
initial_position = 1
size = Vector2i(200, 100)
borderless = false

[node name="Label" type="Label" parent="MainTab/Connect/ErrorPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "[ERROR]"
vertical_alignment = 1
uppercase = true

[node name="Popup" type="PopupPanel" parent="MainTab/Connect"]
initial_position = 1
size = Vector2i(200, 100)
borderless = false

[node name="Label" type="Label" parent="MainTab/Connect/Popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "Message"
vertical_alignment = 1
uppercase = true

[node name="Characters" type="Control" parent="MainTab"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainTab/Characters"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -429.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TabContainer" type="TabContainer" parent="MainTab/Characters/MarginContainer"]
layout_mode = 2
tabs_visible = false

[node name="SelectCharacter" type="TabContainer" parent="MainTab/Characters/MarginContainer/TabContainer"]
layout_mode = 2
tabs_visible = false

[node name="MarginContainer" type="MarginContainer" parent="MainTab/Characters/MarginContainer/TabContainer/SelectCharacter"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="CharacterContainer" type="VBoxContainer" parent="MainTab/Characters/MarginContainer/TabContainer/SelectCharacter/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MainTab/Characters/MarginContainer/TabContainer/SelectCharacter"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="MainTab/Characters/MarginContainer/TabContainer/SelectCharacter/MarginContainer2"]
layout_mode = 2

[node name="NoCharactersLabel" type="Label" parent="MainTab/Characters/MarginContainer/TabContainer/SelectCharacter/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "There are no characters on this account..."

[node name="CreateNewCharacterButton" type="Button" parent="MainTab/Characters/MarginContainer/TabContainer/SelectCharacter/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Create a new chracter"

[node name="Create" type="Control" parent="MainTab"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainTab/Create"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Control" type="Control" parent="MainTab/Create/MarginContainer"]
layout_mode = 2

[node name="CharInfo" type="Panel" parent="MainTab/Create/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -248.0
offset_right = 283.0
offset_bottom = -8.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MainTab/Create/MarginContainer/Control/CharInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Information"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="FirstNameLabel" type="Label" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "First name"

[node name="FirstName" type="LineEdit" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert first name..."

[node name="LastNameLabel" type="Label" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Last name"

[node name="LastName" type="LineEdit" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert last name..."

[node name="NicknameLabel" type="Label" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nickname"

[node name="Nickname" type="LineEdit" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert nickname..."

[node name="GenderLabel" type="Label" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Gender"

[node name="HBoxContainer" type="HBoxContainer" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "Male"

[node name="CheckBox2" type="CheckBox" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "Female"

[node name="Label2" type="Label" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Extra Information"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "Birthday"

[node name="HBoxContainer" type="HBoxContainer" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Month" type="LineEdit" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer2/HBoxContainer"]
layout_mode = 2
placeholder_text = "08"
alignment = 1
max_length = 2
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="Day" type="LineEdit" parent="MainTab/Create/MarginContainer/Control/CharInfo/MarginContainer/VBoxContainer/GridContainer2/HBoxContainer"]
layout_mode = 2
placeholder_text = "31"
alignment = 1
max_length = 2
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="ConfimCharacterButton" type="Button" parent="MainTab/Create/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -50.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Confirm Character"

[node name="CreationOptions" type="MarginContainer" parent="MainTab/Create/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -386.0
offset_bottom = -63.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TabContainer" type="TabContainer" parent="MainTab/Create/MarginContainer/Control/CreationOptions"]
layout_mode = 2
tabs_visible = false

[node name="Label" type="Label" parent="MainTab/Create/MarginContainer/Control/CreationOptions/TabContainer"]
layout_mode = 2
text = "NOT YET IMPLEMENTED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A-pose4x" type="Sprite2D" parent="MainTab/Create/MarginContainer/Control"]
modulate = Color(1, 1, 1, 0.545098)
texture_filter = 6
texture_repeat = 1
position = Vector2(911, 526)
scale = Vector2(0.368702, 0.368702)
texture = ExtResource("2_uts43")

[connection signal="tab_changed" from="MainTab" to="." method="_on_main_tab_tab_changed"]
[connection signal="pressed" from="MainTab/Connect/TabContainer/Login/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="MainTab/Connect/TabContainer/Register/VBoxContainer/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="MainTab/Characters/MarginContainer/TabContainer/SelectCharacter/MarginContainer2/VBoxContainer2/CreateNewCharacterButton" to="." method="_on_create_new_character_button_pressed"]
[connection signal="pressed" from="MainTab/Create/MarginContainer/Control/ConfimCharacterButton" to="." method="_on_confim_character_button_pressed"]
